--- a/DAW/DIW/css/style.css
+++ b/DAW/DIW/css/style.css
@@ -150,7 +150,7 @@ body {
   height: 40px;
   line-height: 40px;
   text-align: center;
-  background-color: #ccc;
+  background-color: #9b9b9b;;
 }
 
 /* Transiciones en efecto Hover */
