--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,56 @@ footer {
   bottom: 0;
   background-color: #000;
 }
+
+body {
+  font-family: sans-serif;
+}
+
+* {
+  list-style: none;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav ul li a {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  display: block;
+  border: 1px solid;
+  padding: 10px 12px;
+}
+
+nav ul li a:hover {
+  background-color: #cacaca;
+}
+
+nav ul li ul {
+  display: none;
+  position: absolute;
+  min-width: 150px;
+}
+
+nav ul li:hover > ul {
+  display: block;
+}
+
+nav ul li{
+  position: relative;
+}
+
+nav ul li ul li ul{
+  top: 0;
+  left: 150px;
+}
+
+nav ul li a:not(:last-child):after {
+  content: "\25bc";
+  font-size: 9px;
+  padding-left: 6px;
+}
+
