--- a/DAW/DIW/tema 2/Practica 9/css/estilo.css
+++ b/DAW/DIW/tema 2/Practica 9/css/estilo.css
@@ -1,11 +1,15 @@
-.contenedor {
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    padding-left: 0px;
-  }
+header {
   
-  .op {
-    display: block;
-    border:  1px solid black;
-  }
+}
+
+.contenedor {
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding-left: 0px;
+}
+
+.op {
+  display: block;
+  border: 1px solid black;
+}
