--- a/DAW/DWES/css/style.css
+++ b/DAW/DWES/css/style.css
@@ -32,7 +32,6 @@
   height: 25px;
   border: 1px solid transparent;
   -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
   border-radius: 5px;
   overflow: hidden;
   white-space: nowrap;
@@ -118,6 +117,7 @@ nav ul li a {
   display: block;
   border: 1px solid;
   padding: 10px 12px;
+  text-decoration: none;
 }
 
 nav ul li a:hover {
