--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,10 @@
 
 .lilista {
   float: none;
-  width: auto !important;
+  width: 100px;
   display: block;
-  border-bottom: 1px solid #cacaca;
-  font-size: 2em;
-  line-height: 1.2em;
+  border: 1px solid #cacaca;
+  border-radius: 5px;
   text-indent: 0;
   margin: 0;
   list-style: none;
@@ -99,6 +98,11 @@ div {
   box-sizing: border-box;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+}
+
 .container {
   width: 95%;
   max-width: 900px;
@@ -107,25 +111,25 @@ div {
 }
 
 .social {
-  /*las imágenes usadas tienen width de 48px*/
-  width: 48px;
+  width: max-content;
+  height: max-content;
   position: fixed;
-  top: 50px;
   right: 0;
-}
-
-/* Extra centrado vertical*/
-
-.social {
-  /*border:1px solid #000;*/
   top: 50%;
-  height: 205px;
-  /*para poner height 192 deberíamos haber indicado en el reset de estilos font-size:0;*/
   margin-top: -100px;
+  display: flex;
+  flex-direction: column;
+  background-color: #000;
 }
 
 .social a {
-  color: white;
+  border: 1px solid #828282;
+  border-radius: 5px;
+  padding: 1px 5px;
+}
+
+.social a:hover {
+  background-color: #4a4949;
 }
 
 footer {
@@ -184,4 +188,71 @@ nav ul li a:not(:last-child):after {
   content: "\25bc";
   font-size: 9px;
   padding-left: 6px;
+}
+
+li :hover {
+  background-color: #cacaca7a;
+}
+
+a :hover {
+  background-color: #cacaca00;
+}
+
+.barra-carga {
+  width: 50%;
+  height: 10px;
+  background-color: #585858;
+  border-radius: 50px;
+}
+
+.barra-progreso {
+  width: 0%;
+  height: 100%;
+  background-color: #ffffff;
+  transition: width 0.5s ease-in-out;
+  border-radius: 50px;
+}
+
+.contenedor-carga {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.contenido {
+  display: none;
+}
+
+@keyframes llenar {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.barra-progreso.llena {
+  animation: llenar 1s ease-in-out forwards;
+}
+
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.contenido.aparecer {
+  animation: aparecer 1s ease-in-out forwards;
+}
+li.inicio {
+  display: none;
+}
+
+nav ul li a {
+  border-radius: 5px;
 }
