--- a/DAW/css/style.css
+++ b/DAW/css/style.css
@@ -50,7 +50,7 @@
   width: auto !important;
   display: block;
   border-bottom: 1px solid #cacaca;
-  font-size: 2em;
+  border-radius: 5px;
   line-height: 1.2em;
   text-indent: 0;
   margin: 0;
