--- a/DAW/Recuperaciones/DIW/Practica 9/css/estilo.css
+++ b/DAW/Recuperaciones/DIW/Practica 9/css/estilo.css
@@ -24,23 +24,42 @@ main{
 .articulo {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 0fr 0fr;
   grid-column-gap: 5%;
-  grid-row-gap: 5%;
+  grid-row-gap: 10%;
+  margin-right: 1%;
 }
 
 article {
   border: 1px solid black;
   padding: 0.5% 3%;
-  margin: 1%;
+  height: fit-content;  
+}
+
+.archivo p{
+  text-align: center;
 }
 form {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: min-content;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 2fr 2fr 2fr 1fr 1fr;
+  width: auto;
+}
+
+.publicidad {
+  margin-top: 3%;
+  text-align: center;
 }
 
 footer {
-  text-align: bottom;
+  margin-top: 10%;
+}
+.logos {
+	display: inline-flex;
+  position: absolute;
+  right: 15%;
+}
+
+.logos div {
+  margin: -50px 5%;
 }
